last update uuid & aes body

--- a/notes_service/config.yml
+++ b/notes_service/config.yml
@@ -3,10 +3,10 @@
 is_debug: true
 listen:
   type: port
-  bind_ip: 84.38.180.103
-  port: 10003
+  bind_ip: 0.0.0.0
+  port: 10002
 mongodb:
-  host: 31.184.254.250
+  host: localhost
   port: 27017
   username:
   password:
